[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "gcalcli"
dynamic = ["version"]
requires-python = ">= 3.8"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Eric Davis", email = "edavis@insanum.com" },
  { name = "Brian Hartvigsen", email = "brian.andrew@brianandjenny.com" },
  { name = "Joshua Crowgey", email = "jcrowgey@uw.edu" },
]
maintainers = [
  { name = "David Barnett", email = "david@mumind.me" },
  { name = "Joshua Crowgey", email = "jcrowgey@uw.edu" },
]
description = "Google Calendar Command Line Interface"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "python-dateutil",
  "google-api-python-client>=1.4",
  "httplib2",
  "google_auth_oauthlib",
  "parsedatetime",
  "argcomplete",
]

[project.urls]
Homepage = "https://github.com/insanum/gcalcli"
Repository = "https://github.com/insanum/gcalcli"

[project.optional-dependencies]
vobject = ["vobject"]

[tool.setuptools]
packages = ["gcalcli"]

[tool.setuptools.data-files]
"share/man/man1" = ["docs/man1/gcalcli.1"]

[tool.setuptools.dynamic]
version = { attr = "gcalcli.__version__" }

[project.scripts]
gcalcli = "gcalcli.cli:main"

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff]
line-length = 80

[tool.ruff.lint]
# Enable Errors, Warnings, Flakes
select = ["E", "W", "F"]

[tool.ruff.format]
# Permit mixed quote style, project currently uses a mix of both.
quote-style = "preserve"

[tool.ruff.lint.extend-per-file-ignores]
"*.pyi" = ["E501"]

[tool.mypy]
mypy_path = "gcalcli:stubs:tests"
